[package]
name = "ethereum-txpool"
version = "0.1.0"
authors = ["Artem Vorotnikov <artem@vorotnikov.me>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
anyhow = "1"
ethereum = { version = "0.7", default-features = false }
ethereum-types = "0.11"
thiserror = "1"
rlp = "0.5"
secp256k1 = { version = "0.20", features = ["global-context", "recovery"] }
sha3 = "0.9"
tracing = "0.1"

[dev-dependencies]
hex = "0.4"
hex-literal = "0.3"
maplit = "1"
